--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "node server.js",
-		"build": "cd client && npm install && npm run build"
+		"build": "cd client && npm install && npm run heroku-postbuild"
 	},
 	"engines": {
 		"node": "14.17.3"
