--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,6 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-scripts": "4.0.3",
-		"serve": "^12.0.0",
 		"web-vitals": "^1.1.2"
 	},
 	"scripts": {
@@ -17,8 +16,7 @@
 		"start": "serve -s build",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject",
-		"heroku-postbuild": "npm run build"
+		"eject": "react-scripts eject"
 	},
 	"proxy": "http://localhost:5000/",
 	"eslintConfig": {
