--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "node server.js",
-		"build": "cd client && npm install && npm run heroku-postbuild"
+		"build": "cd client && npm install && npm run build"
 	},
 	"engines": {
 		"node": "14.17.3"
@@ -16,7 +16,8 @@
 	"license": "ISC",
 	"dependencies": {
 		"express": "^4.17.1",
-		"node-fetch": "^3.0.0"
+		"node-fetch": "^3.0.0",
+		"serve": "^12.0.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.12"
