--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"express": "^4.17.1",
-		"node-fetch": "^3.0.0",
-		"serve": "^12.0.0"
+		"node-fetch": "^3.0.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.12"
